--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-nalgebra-glm = "0.3"
-minifb = "0.20"
-rand = "0.8"
+nalgebra-glm = "0.18.0"
+minifb = "0.26.0"
+rand = "0.8.5"
 rayon = "1.5"
+once_cell = "1.19.0"
+image = "0.25.2"
